// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`cspell-config edit config 1`] = `
"{
  \\"name\\": \\"test-package\\",
  \\"cspell\\": {
    \\"words\\": [
      \\"apple\\",
      \\"banana\\"
    ]
  }
}
"
`;

exports[`cspell-config edit config 2`] = `
"{
  \\"name\\": \\"test-package\\",
  \\"cspell\\": {
    \\"words\\": [
      \\"apple\\"
    ]
  }
}
"
`;

exports[`cspell-config edit config 3`] = `
"{
    // file version
    \\"version\\": \\"0.2\\",
    \\"words\\": [
        \\"angle\\", // with comment
        \\"apple\\",
        // Before \\"before\\"
        \\"before\\",
        \\"cache\\",
        \\"zebra\\" // zebra comment
    ]
}
"
`;

exports[`cspell-config edit config 4`] = `
"version: \\"0.2\\"
words:
  - angle
  - apple
  - before
  - cache
  - zebra
"
`;
